solve vertical align issue

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -464,3 +464,9 @@ left: 0;
 width: 100%;
 height: 100%;
 }
+
+.vcenter {
+    display: inline-block;
+    vertical-align: middle;
+    float: none;
+}
